# FileOperationsGUI

./: .gitignore  MediaGUI.py  README.md  pyproject.toml  requirements.txt  run.py
Episode Listings/: Agatha_All_Along_miniseries_Episodes.csv  Andor_Episodes.csv  Andor_TV_Series_Episodes.csv  Battlestar_Galactica_Episodes.csv  Derry_Girls_Episodes.csv  List_of_Abbott_Elementary_episodes_Episodes.csv  List_of_The_Grand_Tour_episodes_Episodes.csv  List_of_The_Sopranos_episodes_Episodes.csv  Star_Trek_Lower_Decks_season_5_Episodes.csv  Tacoma_FD_Episodes.csv
Images/: CheckSeq.py  FixNames.py  Flatten.py  IMGtoPDF.py  ImageWidget.py  SortToFolders.py
Media/: AppendTitles.py  GetEpisodeTitles.py  MediaWidget.py
Singles/: SingleWidget.py  SplitIMG.py  TranslateIMG.py  TrimEdges.py
Src/: BaseWidget.py
Src/Images/: CheckSeq.py  FixNames.py  FolderTools.py  IMGtoPDF.py  ImageSequences.py  ImageWidget.py  MergePDF.py  PDFTools.py  TrimEdges.py
Src/Media/: AppendTitles.py  GetEpisodeTitles.py  MediaWidget.py  Titles.py
Src/Singles/: DecompilePDF.py  GIFRip.py  ImageSequences.py  SimplifyFolders.py  SingleWidget.py  SplitIMG.py  TranslateInPlace.py  TrimEdges.py  VidToImgSeq.py
Src/Utilities/: FileExplorerTools.py  TranslateInPlace.py  UtilityTools.py
Src/Widgets/: BaseWidget.py  ImageWidget.py  MediaWidget.py  SingleWidget.py
Utilities/: FileExplorerTools.py
